# PointersAndThings

./: .gitignore  CMakeLists.txt  LICENSE  README.md  main_const.cpp  main_multithread.cpp  main_pointers.cpp
